force-app/main/default/objects/Revis_o_Gerencial__c/Revis_o_Gerencial__c.object-meta.xml
<CustomObject>
    <label>Revisão Gerencial</label>
    <nameField>
        <displayFormat>RG-{0000}</displayFormat>
        <label>Nome de Revisão Gerencial</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revisões Gerenciais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>