force-app/main/default/objects/Revis_o_Gerencial__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Name</field>
            <operation>contains</operation>
            <value>HOSPCOM, GDB, HEALTH, IZU</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revisões Gerenciais</relationshipLabel>
    <relationshipName>Revis_es_Gerenciais</relationshipName>
    <type>Lookup</type>
</CustomField>