force-app/main/default/objects/Revis_o_Gerencial__c/fields/Reuniao__c.field-meta.xml
<CustomField>
    <fullName>Reuniao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reunião</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Revisões Gerenciais</relationshipLabel>
    <relationshipName>Revis_es_Gerenciais</relationshipName>
    <type>Lookup</type>
</CustomField>