force-app/main/default/objects/Revis_o_Gerencial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Empresa__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Proxima_Revis_o_Gerencial__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>